// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CustomerList visual snapshots (Issue #162) > matches snapshot — empty list 1`] = `
<div
  class="transition-colors duration-200"
>
  <div
    class="flex items-center justify-between mb-4 lg:mb-6"
  >
    <h1
      class="text-base lg:text-xl font-semibold text-t-primary dark:text-white"
    >
      Customers
    </h1>
    <button
      class="inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-brand text-white text-sm font-semibold hover:bg-brand-dark active:scale-95 transition-all"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
       
      <span
        class="hidden sm:inline"
      >
        Add
      </span>
      <span
        class="sm:hidden"
      >
        +
      </span>
       Customer
    </button>
  </div>
  <div
    class="flex flex-col items-center justify-center py-20 px-6 text-center transition-colors"
  >
    <div
      class="w-16 h-16 rounded-2xl bg-brand/10 dark:bg-zinc-900 flex items-center justify-center mb-5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users text-brand/60 dark:text-brand/80"
        fill="none"
        height="28"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
    </div>
    <h3
      class="text-base font-semibold text-t-primary dark:text-zinc-100 mb-2"
    >
      No customers yet
    </h3>
    <p
      class="text-sm text-t-muted dark:text-zinc-500 max-w-xs mb-6"
    >
      Add your first customer to start sending invoices and tracking payments.
    </p>
    <button
      class="inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-brand text-white text-sm font-semibold hover:bg-brand-dark active:scale-95 transition-all shadow-sm shadow-brand/20"
    >
      Add your first customer
    </button>
  </div>
</div>
`;

exports[`CustomerList visual snapshots (Issue #162) > matches snapshot — loading (customers still undefined) 1`] = `
<div
  class="transition-colors duration-200"
>
  <div
    class="flex items-center justify-between mb-4 lg:mb-6"
  >
    <h1
      class="text-base lg:text-xl font-semibold text-t-primary dark:text-white"
    >
      Customers
    </h1>
    <button
      class="inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-brand text-white text-sm font-semibold hover:bg-brand-dark active:scale-95 transition-all"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
       
      <span
        class="hidden sm:inline"
      >
        Add
      </span>
      <span
        class="sm:hidden"
      >
        +
      </span>
       Customer
    </button>
  </div>
  <div
    class="flex items-center justify-center py-20"
  >
    <div
      class="flex flex-col items-center gap-3 text-t-muted dark:text-zinc-400"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-loader-circle animate-spin"
        fill="none"
        height="28"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
      <span
        class="text-sm"
      >
        Loading customers...
      </span>
    </div>
  </div>
</div>
`;

exports[`CustomerList visual snapshots (Issue #162) > matches snapshot — with customers 1`] = `
<div
  class="transition-colors duration-200"
>
  <div
    class="flex items-center justify-between mb-4 lg:mb-6"
  >
    <h1
      class="text-base lg:text-xl font-semibold text-t-primary dark:text-white"
    >
      Customers
    </h1>
    <button
      class="inline-flex items-center justify-center gap-2 px-4 py-2.5 h-10 bg-brand text-white text-sm font-semibold hover:bg-brand-dark active:scale-95 transition-all"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
       
      <span
        class="hidden sm:inline"
      >
        Add
      </span>
      <span
        class="sm:hidden"
      >
        +
      </span>
       Customer
    </button>
  </div>
  <div
    class="flex items-center gap-3 mb-5 px-4 py-2.5 bg-white border border-border rounded-lg dark:bg-zinc-900 dark:border-zinc-800 transition-colors"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search text-t-muted dark:text-zinc-500"
      fill="none"
      height="18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
    <input
      class="flex-1 bg-transparent outline-none text-sm text-t-primary dark:text-zinc-200 placeholder:text-t-muted dark:placeholder:text-zinc-600"
      placeholder="Search customers..."
      type="text"
      value=""
    />
  </div>
  <div
    class="mb-6 rounded-xl border border-border bg-white p-4 shadow-sm dark:bg-zinc-900 dark:border-zinc-800"
  >
    <div
      class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between"
    >
      <div>
        <h2
          class="text-sm font-semibold text-t-primary dark:text-white"
        >
          Customer description
        </h2>
        <p
          class="text-xs text-t-muted"
        >
          Keep rich notes for proposals, preferences, and onboarding context.
        </p>
      </div>
      <div
        class="w-full lg:w-64"
      >
        <label
          class="text-xs font-medium text-t-secondary uppercase tracking-wide"
        >
          Active customer
        </label>
        <select
          class="mt-2 w-full rounded-lg border border-border bg-white px-3 py-2 text-sm text-t-primary shadow-sm dark:bg-zinc-900 dark:text-zinc-200"
        >
          <option
            value="c-1"
          >
            Acme Corp
          </option>
        </select>
      </div>
    </div>
    <div
      class="mt-4"
    >
      <div
        data-testid="rich-text-editor-stub"
      >
        <span
          class="rte-label"
        >
          Description
        </span>
        <span
          class="rte-placeholder"
        >
          Add a rich description for this customer...
        </span>
        <div
          class="rte-value"
        >
          &lt;p&gt;Preferred partner&lt;/p&gt;
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="data-table-stub"
  >
    <span
      data-testid="data-table-empty-msg"
    >
      No customers found
    </span>
    <ul>
      <li>
        Acme Corp
      </li>
    </ul>
  </div>
</div>
`;
